Refactor CELL-08: Implemented rewriting the entire grid for loading new configs